# zkpd

./: Cargo.toml  README.md
benches/: my_benchmark.rs
src/: beaver_triple_generatoor.rs  lib.rs  main.rs  secret_sharing.rs  util.rs
src/ff/: bls12_381.rs
src/mode/: mod.rs  poly.rs  scalar.rs
src/p2p/: mod.rs  scalar_worker.rs
