[package]
name = "zkpd"
version = "0.1.0"
edition = "2021"
# Specify the default binary to run
default-run = "hello"

[dependencies]
ff = { version = "0.13", features = ["derive"] }
rand = "0.8"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "hello"
path = "bin/hello.rs"

[[bin]]
name = "poly"
path = "bin/poly.rs"
