[package]
name = "zkpd"
version = "0.1.0"
edition = "2021"
# Specify the default binary to run
default-run = "scalar"

[dependencies]
ff = { version = "0.13", features = ["derive"] }
rand = "0.8"
rayon = "1.7"
clap = { git = "https://github.com/clap-rs/clap", branch = "master", features = [
    "derive",
] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "scalar"
path = "bin/scalar.rs"

[[bin]]
name = "poly"
path = "bin/poly.rs"

[[bin]]
name = "p2p_scalar_delegator"
path = "bin/p2p_scalar_delegator.rs"


[[bin]]
name = "p2p_scalar_worker"
path = "bin/p2p_scalar_worker.rs"
clap = { version = "4", features = ["derive"] }
